--- a/package.json
+++ b/package.json
@@ -1,45 +1,26 @@
 {
-  "name": "height-wealth-analyzer",
+  "name": "height-vs-wealth",
   "version": "1.0.0",
   "description": "Interactive visualization of height vs wealth correlation",
-  "main": "server.js",
+  "main": "index.html",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "npm run minify && npm run optimize",
-    "minify": "npm run minify:css && npm run minify:js",
-    "minify:css": "cleancss -o dist/styles.min.css styles.css",
-    "minify:js": "uglifyjs script.js -o dist/script.min.js -c -m",
-    "optimize": "npm run optimize:images",
-    "optimize:images": "echo 'No images to optimize'",
-    "deploy": "npm run build && pm2 start ecosystem.config.js",
-    "stop": "pm2 stop height-wealth-analyzer",
-    "restart": "pm2 restart height-wealth-analyzer",
-    "logs": "pm2 logs height-wealth-analyzer"
+    "dev": "python3 -m http.server 8001",
+    "start": "python3 -m http.server 8001",
+    "build": "echo 'No build step required for static site'",
+    "vercel-build": "echo 'No build step required for static site'"
   },
   "keywords": [
     "data-visualization",
     "height",
     "wealth",
     "correlation",
-    "chart.js",
-    "interactive"
+    "chart.js"
   ],
-  "author": "Your Name",
+  "author": "Height vs Wealth Analytics",
   "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "compression": "^1.7.4",
-    "helmet": "^7.1.0",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2",
-    "clean-css-cli": "^5.6.2",
-    "uglify-js": "^3.17.4",
-    "pm2": "^5.3.0"
-  },
+  "devDependencies": {},
+  "dependencies": {},
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=14.0.0"
   }
 }
