--- a/vercel.json
+++ b/vercel.json
@@ -14,16 +14,7 @@
   ],
   "headers": [
     {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg))",
+      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg))$",
       "headers": [
         {
           "key": "Cache-Control",
